--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
+  <body class="max-w-screen max-h-[100dvh] overflow-x-clip">
     <div id="app" class="mx-auto"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
